--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<div class="tag">
 				<h1 class="headingtxt"><span>01. </span>&lta little about me&gt</h1>
 			</div>
-			<p class="prg_me">I've been sailing the web developement seas ever since my student years more than 2years ago. I've been creating everything from regular websites and dashboards, all the way to desktop applications</p>
+			<p class="prg_me">I've been sailing the web development seas ever since my student years more than 2years ago. I've been creating everything from regular websites and dashboards, all the way to desktop applications</p>
 			<p class="prg_me">The main characterestic of my work one could give for all these years has been simple:</p>
 			<span class="whatcando">Get <i class="fa-solid fa-poo"></i> done. Fast.</span>
 			<p class="prg_me">I write clean and modern code, i do it really fast.</p>
